Forward-port r5148 from branch 1.0.x: rowlog messagedecoder fixes.
git-svn-id: svn+ssh://dev.outerthought.org/outerthought/lilyproject/trunk@5156 b80d95f8-e103-0410-bd55-e03a9dc29394